[package]
name = "fubuki"
version = "0.0.0"
authors = ["nnazo <jacobcurtis2266@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/nnazo/fubuki"
description = "A cross-platform anime and manga tracker for AniList"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "fubuki_lib"
# path = "src/lib.rs"

# [[bin]]
# name = "fubuki"
# path = "src/main.rs"

[dependencies]
iced = { git = "https://github.com/hecrj/iced", rev = "869fa6b", features = ["canvas", "tokio", "image", "debug"] }
regex = "1.3.7"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.53"
reqwest = { version = "0.10.6", features = ["json"] }
oauth2 = "2.0.0"
open = "1.4.0"
url = "1.7.2"
tokio = { version = "0.2.21", features = ["full"] }
app_dirs2 = "2.0.4"
anyhow = "1.0.31"
once_cell = "1.4.0"
strsim = "0.10.0"
chrono = "0.4.13"
enum_dispatch = "0.3.1"
itertools = "0.9.0"
log4rs = { version = "1.0.0-alpha-1", features = ["json_encoder"] }
log = "0.4.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser"] }

[target.'cfg(not(windows))'.dependencies]
wmctrl = "0.1.7"
